# flashcard-generator

./: .env.template  .gitignore  Dockerfile  README.md  cards.py  claude_cards.py  container.py  file_utils.py  format_utils.py  generator.py  gpt-cards.js  gpt_cards.py  host.py  importer.py  llm_utils.py  main.py  models.py  package-lock.json  package.json  processor.py  prompts.py  pyproject.toml  requirements.txt  scraper.py  templates.py  utils.py
content/oop_and_ood/: metadata.yaml
content/problem_solving/: metadata.yaml
content/python/: metadata.yaml
content/the-odin-project/: metadata.yaml
data/problem_solving/: tags.txt
data/sources/dsa/: metadata.yaml
data/sources/java/: metadata.yaml
data/sources/oop_and_ood/: metadata.yaml
data/sources/problem_solving/: metadata.yaml
data/sources/python/: metadata.yaml  tags.txt
data/sources/the-odin-project/: metadata.yaml
data/sources/used-files/test/: 1_test_odin_lesson.txt
data/the-odin-project/: tags.txt
data/used-files/the-odin-project/webpage_output/: https___www_theodinproject_com_lessons_foundations-dom-manipulation-and-events.json
flashcard-data/dsa/: tags.txt
flashcard-data/java/: tags.txt
flashcard-data/oop_and_ood/: tags.txt
flashcard-data/problem_solving/: tags.txt
flashcard-data/the-odin-project/: tags.txt
flashcard-data/used-files/java/: 1_test_txt.txt
generator/: generator.py  llm_utils.py  main.py  templates.py
generator/importer/: importer.py  templates.py
generator/openai/: generator.py  models.py  openai_generator.py
generator/utils/: file_utils.py  flashcard_logger.py  format_utils.py  llm_utils.py  scraper.py  utils.py
setup/: .env.template  requirements.txt
utils/: file_utils.py  flashcard_logger.py  format_utils.py  importer.py  llm_utils.py  models.py  openai_generator.py  prompts.py  scraper.py  templates.py
