[project]
name = "flashcard-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.10",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "anthropic==0.39.0",
    "anyio==4.6.2.post1",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.4",
    "attrs==24.2.0",
    "babel==2.16.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.2.0",
    "brotli==1.1.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "comm==0.2.2",
    "courlan==1.3.2",
    "cryptography==44.0.0",
    "cssselect2==0.7.0",
    "dateparser==1.2.0",
    "debugpy==1.8.9",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "distro==1.9.0",
    "docstring-parser==0.16",
    "executing==2.1.0",
    "fastjsonschema==2.21.0",
    "fonttools==4.55.3",
    "fpdf==1.7.2",
    "fqdn==1.5.1",
    "frozenlist==1.5.0",
    "h11==0.14.0",
    "htmldate==1.9.2",
    "httpcore==1.0.7",
    "httpx==0.27.2",
    "idna==3.10",
    "instructor==1.7.0",
    "ipykernel==6.29.5",
    "ipython==8.30.0",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "jiter==0.6.1",
    "joblib==1.4.2",
    "json5==0.10.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.10.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.14.2",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.2.6",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "justext==3.0.1",
    "lxml==5.3.0",
    "lxml-html-clean==0.4.1",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markdown2==2.5.2",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.0.2",
    "mmh3==5.0.1",
    "multidict==6.1.0",
    "nbclient==0.10.1",
    "nbconvert==7.16.4",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "notebook==7.2.2",
    "notebook-shim==0.2.4",
    "numpy==2.1.3",
    "openai==1.55.0",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pdf2image==1.17.0",
    "pdfminer==20191125",
    "pdfminer-six==20240706",
    "pillow==11.0.0",
    "platformdirs==4.3.6",
    "poppler-utils>=0.1.0",
    "prometheus-client==0.21.0",
    "prompt-toolkit==3.0.48",
    "propcache==0.2.1",
    "psutil==6.1.0",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pycryptodome==3.21.0",
    "pydantic==2.10.0",
    "pydantic-core==2.27.0",
    "pydyf==0.11.0",
    "pygments==2.18.0",
    "pyphen==0.17.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-json-logger==2.0.7",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "referencing==0.35.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==13.9.4",
    "rpds-py==0.21.0",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "send2trash==1.8.3",
    "setuptools==75.6.0",
    "shellingham==1.5.4",
    "six==1.16.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "stack-data==0.6.3",
    "tenacity==9.0.0",
    "terminado==0.18.1",
    "threadpoolctl==3.5.0",
    "tinycss2==1.4.0",
    "tinyhtml5==2.0.0",
    "tld==0.13",
    "tornado==6.4.2",
    "tqdm==4.67.0",
    "trafilatura==2.0.0",
    "traitlets==5.14.3",
    "typer==0.15.1",
    "types-python-dateutil==2.9.0.20241003",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "tzlocal==5.2",
    "uri-template==1.3.0",
    "urllib3==2.2.3",
    "uv==0.5.14",
    "wcwidth==0.2.13",
    "weasyprint==63.1",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "yarl==1.18.3",
    "zopfli==0.2.3.post1",
]
